Angular - Rotas, comunicação api

--- a/Aula011/filmes/src/app/filme-list/filme-list.component.html
+++ b/Aula011/filmes/src/app/filme-list/filme-list.component.html
@@ -1,5 +1,7 @@
+
 <p>Lista de filmes</p>
 
+<a href="/filmes/cadastrar" class="btn btn-success" >Novo filme</a>
 <table *ngIf="lista.length>0; else listaVazia">
   <thead>
     <tr>
