--- a/Aula011/filmes/src/app/filme-form/filme-form.component.html
+++ b/Aula011/filmes/src/app/filme-form/filme-form.component.html
@@ -1,12 +1,14 @@
 
 <form (ngSubmit)="salvar()">
     <label for="nome">Id:</label>
-    <input type="text" name="id" id="id" [(ngModel)]="id"/> <br>
+    <input type="text" name="id" id="id" [(ngModel)]="filme.id"/> <br>
     <label for="nome">Nome:</label>
-    <input type="text" name="nome" id="nome" [(ngModel)]="nome"/> <br>
+    <input type="text" name="nome" id="nome" [(ngModel)]="filme.nome"/> <br>
     <label for="diretor">Diretor:</label>
-    <input type="text" name="diretor" id="diretor" [(ngModel)]="nomeDiretor"/> <br>
+    <input type="text" name="diretor" id="diretor" [(ngModel)]="filme.nomeDiretor"/> <br>
     <label for="genero">Genero:</label>
-    <input type="text" name="genero" id="genero" [(ngModel)]="genero"/> <br>
+    <input type="text" name="genero" id="genero" [(ngModel)]="filme.genero"/> <br>
     <input type="submit" value="Salvar">
 </form>
+
+<a href="/filmes" class="btn btn-secondary">Voltar para lista</a>
