Editar e Deletar pela API

--- a/Aula011/filmes/src/app/filme-form/filme-form.component.html
+++ b/Aula011/filmes/src/app/filme-form/filme-form.component.html
@@ -1,7 +1,6 @@
 
+<p class="text-primary">{{msg}}</p>
 <form (ngSubmit)="salvar()">
-    <label for="nome">Id:</label>
-    <input type="text" name="id" id="id" [(ngModel)]="filme.id"/> <br>
     <label for="nome">Nome:</label>
     <input type="text" name="nome" id="nome" [(ngModel)]="filme.nome"/> <br>
     <label for="diretor">Diretor:</label>
